--- a/bin/explore.ipynb
+++ b/bin/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,121 +1138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[859,\n",
-       " 613,\n",
-       " 604,\n",
-       " 586,\n",
-       " 513,\n",
-       " 498,\n",
-       " 373,\n",
-       " 314,\n",
-       " 313,\n",
-       " 306,\n",
-       " 239,\n",
-       " 238,\n",
-       " 237,\n",
-       " 234,\n",
-       " 221,\n",
-       " 219,\n",
-       " 212,\n",
-       " 205,\n",
-       " 185,\n",
-       " 179,\n",
-       " 173,\n",
-       " 164,\n",
-       " 163,\n",
-       " 156,\n",
-       " 153,\n",
-       " 139,\n",
-       " 134,\n",
-       " 133,\n",
-       " 121,\n",
-       " 114,\n",
-       " 110,\n",
-       " 110,\n",
-       " 109,\n",
-       " 106,\n",
-       " 95,\n",
-       " 94,\n",
-       " 94,\n",
-       " 93,\n",
-       " 91,\n",
-       " 91,\n",
-       " 90,\n",
-       " 89,\n",
-       " 87,\n",
-       " 84,\n",
-       " 80,\n",
-       " 78,\n",
-       " 74,\n",
-       " 73,\n",
-       " 69,\n",
-       " 61,\n",
-       " 59,\n",
-       " 58,\n",
-       " 58,\n",
-       " 56,\n",
-       " 53,\n",
-       " 52,\n",
-       " 50,\n",
-       " 49,\n",
-       " 48,\n",
-       " 47,\n",
-       " 47,\n",
-       " 46,\n",
-       " 46,\n",
-       " 46,\n",
-       " 45,\n",
-       " 44,\n",
-       " 44,\n",
-       " 44,\n",
-       " 43,\n",
-       " 43,\n",
-       " 43,\n",
-       " 42,\n",
-       " 40,\n",
-       " 40,\n",
-       " 39,\n",
-       " 37,\n",
-       " 36,\n",
-       " 36,\n",
-       " 36,\n",
-       " 36,\n",
-       " 36,\n",
-       " 35,\n",
-       " 34,\n",
-       " 33,\n",
-       " 33,\n",
-       " 33,\n",
-       " 33,\n",
-       " 33,\n",
-       " 33,\n",
-       " 32,\n",
-       " 32,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 31,\n",
-       " 30]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sorted_max' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c832dadc64f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m859\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted_max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sorted_max' is not defined"
+     ]
     }
    ],
    "source": [
-    "[val[1] for val in sorted_max[:100]]"
+    "[val[1]/859 for val in sorted_max[:100]]"
    ]
   }
  ],
